Fix: text messes up the design when is too long

--- a/public/css/resets.css
+++ b/public/css/resets.css
@@ -21,3 +21,9 @@ select,
 button {
     border-radius: var(--radius);
 }
+
+p {
+    text-overflow: ellipsis;
+    overflow: hidden;
+
+}
